--- a/ansible-dev/qa-play.yml
+++ b/ansible-dev/qa-play.yml
@@ -24,7 +24,7 @@
          path: /opt/qa/spg/spg.log
          state: touch
      - name: Start and enable Daemon
-       systemd_service:
+       systemd:
           name: docker
           state: started
           enabled: yes
