--- a/ansible-dev/qa-deploy.yml
+++ b/ansible-dev/qa-deploy.yml
@@ -10,7 +10,7 @@
         state: absent
 
     - name: Get the PID
-      shell: lsof -i :8082
+      shell: lsof -t -i :8082
       register: pid_output
       tags:
         - a
